[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybsn"
version = "0.5.0"
description = "pybsn is a python interface to Arista Networks BigDB/Atlas based products"
readme = "README.md"
license = "EPL-1.0"
authors = [
    {name = "Andreas Wundsam", email = "Andreas.Wundsam@arista.com"},
    {name = "Andre Kutzleb"},
    {name = "Jason Parraga"},
    {name = "Rich Lane"},
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.3.0",
    "IPython>=7.13.0",
    "traitlets>=4.3.3",
]

[project.optional-dependencies]
test = [
    "responses>=0.10.6",
    "coverage>=5.0",
]
dev = [
    "responses>=0.10.6",
    "coverage>=5.0",
    "flake8>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/bigswitch/pybsn"
Repository = "https://github.com/bigswitch/pybsn"

[tool.setuptools]
packages = ["pybsn"]
script-files = ["bin/pybsn-repl", "bin/pybsn-schema"]