[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pybsn"
version = "0.5.0"
description = "pybsn is a python interface to Arista Networks BigDB/Atlas based products"
readme = "README.md"
license = {text = "EPL-1.0"}
authors = [
    {name = "Andreas Wundsam", email = "Andreas.Wundsam@arista.com"},
    {name = "Andre Kutzleb"},
    {name = "Jason Parraga"},
    {name = "Rich Lane"},
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.3.0",
    "IPython>=7.13.0",
    "traitlets>=4.3.3",
]

[project.optional-dependencies]
test = [
    "responses>=0.10.6",
    "coverage>=5.0",
]
dev = [
    "responses>=0.10.6",
    "coverage>=5.0",
    "flake8>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/bigswitch/pybsn"
Repository = "https://github.com/bigswitch/pybsn"

[tool.setuptools]
packages = ["pybsn"]
script-files = ["bin/pybsn-repl", "bin/pybsn-schema"]

[dependency-groups]
dev = [
    "autopep8>=2.0.0",
    "black>=24.8.0",
    "ruff>=0.8.0",
    "isort>=5.13.0",
    "mypy>=1.0.0",
    "types-requests>=2.0.0",
]

[tool.black]
line-length = 127

[tool.ruff]
line-length = 127

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.isort]
profile = "black"
line_length = 127

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
